// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/SpinnerButton should match snapshot with children 1`] = `
<div>
  <button
    class="btn btn-primary"
  >
    <span
      id="child1"
    />
    <span
      id="child2"
    />
  </button>
</div>
`;

exports[`components/SpinnerButton should match snapshot with required props 1`] = `
<div>
  <button
    class="btn btn-primary"
  >
    Test
  </button>
</div>
`;

exports[`components/SpinnerButton should match snapshot with spinning 1`] = `
<div>
  <button
    class="btn btn-primary"
    disabled=""
  >
    <span
      class="LoadingSpinner with-text"
      data-testid="loadingSpinner"
      id="loadingSpinner"
    >
      <span
        aria-label="Loading Icon"
        class="_spinner_3elm7_10 spinner"
        role="status"
        style="width: 16px; height: 16px; --spinner-stroke-width: 2px;"
      />
      Test
    </span>
  </button>
</div>
`;
